src/parser/snapshots/monkey_language_server__parser__test__fn_call_unhappy_4_errors.snap
---
source: src/parser/test.rs
description: "add(x y, z)"
expression: "parser_errors(\"add(x y, z)\", errors)"
---
add(x y, z)
      ^ SyntaxError: Expected ',' not found.
